Trying to get auction service to communicate with auction db on docker

--- a/auction_service/Dockerfile
+++ b/auction_service/Dockerfile
@@ -16,4 +16,4 @@ COPY . /app
 # configure the container to run in an executed manner
 ENTRYPOINT ["python3"]
 
-CMD ["index.py"]
+CMD ["init_auction_db.py", "index.py"]
