--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,8 @@ services:
     ports:
       - "5002:5002"
     depends_on:
-      - "auction_db"
+      auction_db:
+        condition: service_healthy
   auction_db:
     image: mysql:latest
     build: mysql-server
@@ -17,3 +18,7 @@ services:
       # MYSQL_PASSWORD: root_password
     ports:
       - "3308:3306"
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 5s
+      retries: 10
