--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,23 +1,24 @@
 version: "3"
 services:
+  # Builds the auction service using port 5002
   auction_service:
     build: auction_service
     ports:
       - "5002:5002"
+    # Makes the auction service wait until the auction DB is up and running
     depends_on:
       auction_db:
         condition: service_healthy
+
+  # Builds the auction DB mapping port 3308 to 3306 (MySQL default)
+  # Auction DB using port 3308 allows other SQL DBs to use other ports
   auction_db:
     image: mysql:latest
-    build: mysql-server
     environment:
-      # MYSQL_DATABASE: auction_db
       MYSQL_ROOT_PASSWORD: root_password
-      # MYSQL_ROOT_HOST: localhost
-      # MYSQL_USER: root
-      # MYSQL_PASSWORD: root_password
     ports:
       - "3308:3306"
+    # Runs the command to check whether the db is up and running yet
     healthcheck:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 5s
