Commiting a working version of the auction queue before cleaning it up

--- a/auction_queue/Dockerfile
+++ b/auction_queue/Dockerfile
@@ -1,6 +1,7 @@
 FROM python:3.8-alpine
 COPY ./requirements.txt /app/requirements.txt
 WORKDIR /app
+RUN apk add -u gcc musl-dev
 RUN pip install -r requirements.txt
 COPY . /app
-CMD python3 init_auction_db.py; python3 routers.py
+CMD python3 auction_queue.py
