--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     build: auction_queue
     ports:
       - "5004:5004"
+    volumes:
+      - /etc/localtime:/etc/localtime
     depends_on:
       auction_db:
         condition: service_healthy
