--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,25 +1,6 @@
 version: "3"
 services:
-  # Builds the auction service using port 5003
-  auction_service:
-    build: auction_service
-    ports:
-      - "5003:5003"
-    # Makes the auction service wait until the auction DB is up and running
-    depends_on:
-      auction_db:
-        condition: service_healthy
-
-  auction_queue:
-    build: auction_queue
-    ports:
-      - "5004:5004"
-    volumes:
-      - /etc/localtime:/etc/localtime
-    depends_on:
-      auction_db:
-        condition: service_healthy
-
+  #---------- AUCTION ----------#
   # Builds the auction DB mapping port 3308 to 3306 (MySQL default)
   # Auction DB using port 3308 allows other SQL DBs to use other ports
   auction_db:
@@ -33,3 +14,66 @@ services:
       test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
       timeout: 5s
       retries: 10
+
+  # Builds the auction service using port 5003
+  auction_service:
+    build: auction_service
+    ports:
+      - "5003:5003"
+    # Makes the auction service wait until the auction DB is up and running
+    depends_on:
+      auction_db:
+        condition: service_healthy
+
+  # Builds the auction queue service using port 5004
+  # auction_queue:
+  #   build: auction_queue
+  #   ports:
+  #     - "5004:5004"
+  #   volumes:
+  #     - /etc/localtime:/etc/localtime
+  #   depends_on:
+  #     auction_db:
+  #       condition: service_healthy
+
+  #---------- INVENTORY ----------#
+  inventorydb:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+    ports:
+      - "3309:3306"
+    # Runs the command to check whether the db is up and running yet
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 5s
+      retries: 10
+
+  inventory_service:
+    build: inventory
+    ports:
+      - "5001:5000"
+    depends_on:
+      inventorydb:
+        condition: service_healthy
+
+  #---------- SHOPPING ----------#
+  shoppingdb:
+    image: mysql:latest
+    environment:
+      MYSQL_ROOT_PASSWORD: root_password
+    ports:
+      - "3307:3306"
+    # Runs the command to check whether the db is up and running yet
+    healthcheck:
+      test: ["CMD", "mysqladmin", "ping", "-h", "localhost"]
+      timeout: 5s
+      retries: 10
+
+  shopping_service:
+    build: shopping_service
+    ports:
+      - "5002:5000"
+    depends_on:
+      shoppingdb:
+        condition: service_healthy
