Add account service to docker-compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -77,3 +77,14 @@ services:
     depends_on:
       shoppingdb:
         condition: service_healthy
+
+  #---------- ACCOUNT ----------#
+  account_service_db:
+    image: mongo
+    ports:
+      - "27017:27017"
+
+  account_service:
+    build: account_service
+    ports:
+      - "5005:5000"
