--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -120,7 +120,8 @@ services:
       - /etc/localtime:/etc/localtime
 
   #---------- FRONTEND ----------#
-  # frontend:
-  #   build: ui
-  #   ports:
-  #     - "3000:3000"
+  frontend:
+    build: ui
+    ports:
+      - "3000:3000"
+
